# compiler_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  lexer.c
.claude/: settings.local.json
lexer/: CMakeLists.txt  Dockerfile  lexer.c
lexer/tests/: bad.c  test_class.c  test_unit.c
lexer/tests/expected/: 01_keywords.txt  02_identifiers.txt  07_mixed.txt  11_boundary.txt
lexer/tests/inputs/: 01_keywords.txt  02_identifiers.txt  06_invalid.txt
parser/: CMakeLists.txt  FIRST_set.txt  FOLLOW_set.txt  ParseTree.h  Parser.cpp  Parser.h  README.md  Token.h  cfg.txt  lexer_reader.l  main.cpp  parser.y
parser/tests/: 01_simple_class.c  02_access_specifiers.c  03_functions.c  04_if_else.c  05_while_loop.c  06_for_loop.c  07_new_delete.c  08_multiple_classes.c  09_missing_class_name.c  10_missing_access_specifier.c  11_missing_semicolon.c  12_missing_brace.c  13_invalid_panic_recovery.c  14_stress.c  15_nested_malformed.c  run_tests.sh
tests/: run_io_tests.sh
tests/expected/: 02_identifiers.txt  03_integers.txt  04_operators.txt  05_delimiters.txt  06_invalid.txt  08_empty.txt  09_malformed.txt  10_stress.txt
tests/inputs/: 03_integers.txt  04_operators.txt  05_delimiters.txt  09_malformed.txt  10_stress.txt
